--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
-add_subdirectory(ws_echo)
-add_subdirectory(wss_echo)
+add_subdirectory(ws_client_echo)
+add_subdirectory(ws_server_echo)
+add_subdirectory(wss_client_echo)
 add_subdirectory(binance_stream)
