--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(ws_client_echo)
 add_subdirectory(ws_server_echo)
+add_subdirectory(ws_server_minichat)
 add_subdirectory(wss_client_echo)
 add_subdirectory(wss_server_echo)
 add_subdirectory(binance_stream)
