--- a/examples/ws_server_minichat/CMakeLists.txt
+++ b/examples/ws_server_minichat/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(ws_server_broadcaster main.cpp)
-target_link_libraries(ws_server_broadcaster wspp::wspp)
+add_executable(ws_server_minichat main.cpp)
+target_link_libraries(ws_server_minichat wspp::wspp)
