Publish Autobahn Reports Attempt #1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,3 +89,12 @@ jobs:
         with:
           name: autobahn-wspp-reports
           path: reports/
+
+      - name: Publish Autobahn reports to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: reports
+          destination_dir: autobahn
