Server Api Upgrade & Example Impl

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(ws_client_echo)
 add_subdirectory(ws_server_echo)
 add_subdirectory(ws_server_minichat)
+add_subdirectory(ws_server_pubsubchat)
 add_subdirectory(wss_client_echo)
 add_subdirectory(wss_server_echo)
 add_subdirectory(binance_stream)
